--- a/bower.json
+++ b/bower.json
@@ -12,5 +12,11 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "devDependencies": {
+    "gulp": "~3.8.11"
+  },
+  "dependencies": {
+    "jquery": "~2.1.3"
+  }
 }
